# -pdf-rename-tool-hopeffy

./: LICENSE  README.md  setup.cfg
src/pdf_rename_tool_hopeffy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/pdf_title_renamer/: renamer.py
src/pdf_title_renamer.egg-info/: PKG-INFO  SOURCES.txt
