[metadata]
name = pdf-rename-tool-hopeffy
version = 0.0.1
author = Eftelya
author_email = eftelyacelik@email.com
description = A Python utility to rename PDF files based on their titles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hopeffy/pdf-rename-tool-hopeffy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
install_requires =
    pdfplumber
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pdf-rename = pdf_title_renamer.renamer:main
